--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,6 @@
     @apply border-border;
   }
   body {
-    @apply text-foreground bg-black font-wagmi;
+    @apply text-foreground bg-[#0E0D09] font-switzer;
   }
 }
