--- a/styles/globals.css
+++ b/styles/globals.css
@@ -86,6 +86,6 @@ input[type="range"]::-webkit-slider-thumb {
     @apply border-border;
   }
   body {
-    @apply text-foreground bg-[#0E0D09] font-switzer;
+    @apply text-foreground bg-[#0A0601] font-switzer;
   }
 }
